finished backend. Added html. items loading on the html.

--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start:production": "node app.js",
+    "start:dev": "nodemon -e html,css,js app.js",
+    "start": "npm run start:dev",
+    "build:css": "node-sass -w -r assets/stylesheets -o public/stylesheets"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
+    "bootstrap": "^3.3.7",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
+    "node-sass": "^4.3.0",
     "nunjucks": "^3.0.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
